src/test/ui/issues/60000-69999/issue-63983.stderr
error[E0532]: expected unit struct, unit variant or constant, found tuple variant `MyEnum::Tuple`
  --> $DIR/issue-63983.rs:8:9
   |
LL |     Tuple(i32),
   |     ---------- `MyEnum::Tuple` defined here
...
LL |         MyEnum::Tuple => "",
   |         ^^^^^^^^^^^^^ help: use the tuple variant pattern syntax instead: `MyEnum::Tuple(_)`

error[E0532]: expected unit struct, unit variant or constant, found struct variant `MyEnum::Struct`
  --> $DIR/issue-63983.rs:10:9
   |
LL |     Struct{ s: i32 },
   |     ---------------- `MyEnum::Struct` defined here
...
LL |         MyEnum::Struct => "",
   |         ^^^^^^^^^^^^^^ help: use struct pattern syntax instead: `MyEnum::Struct { s }`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0532`.
